mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  selector:
    matchLabels:
      app: mongo-db
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo:3.6.5-jessie
        volumeMounts:
        - name: mongo-presistent-storage
          mountPath: /data/db
      volumes:
      - name: mongo-presistent-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-mongodb
spec:
  selector:
    app: mongo-db
  type: ClusterIP
  ports:
  - name: mongo-db
    port: 27017
