queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  selector:
    matchLabels:
      app: queue
  replicas: 1
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: active-mq
        image: richardchesterwood/k8s-fleetman-queue:release2
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  selector:
    app: queue
  type: NodePort
  ports:
  - name: admin-panel
    port: 8161
    nodePort: 30010
  - name: queue-port
    port: 61616
