ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entry-endpoint
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required!'

spec:
  rules:
    - host: neatphar.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fleetman-webapp
                port: 
                  number: 80
